# SmartCommute

./: .gitignore  README.md  diagrams.drawio
project/java_services/: pom.xml
project/java_services/src/main/java/java_services/: JavaServicesApplication.java
project/java_services/src/main/java/java_services/controllers/: CardController.java  UserController.java
project/java_services/src/main/java/java_services/data_objects/: AuthDTO.java  CardDAO.java  UserDAO.java
project/java_services/src/main/java/java_services/repositories/: CardRepositories.java  JSONOperations.java  UserRepositories.java
project/java_services/src/main/java/java_services/services/: CardServices.java  UserServices.java
project/java_services/src/main/resources/: application.properties
project/java_services/src/test/java/java_services/: JavaServicesApplicationTests.java
project/python_services/: Dockerfile  pyproject.toml
project/python_services/backend/: environment_variables.py  main.py
project/python_services/backend/controllers/: __init__.py  route.py  station.py  travel.py
project/python_services/backend/repositories/: __init__.py  base_repository.py  route.py  station.py
project/python_services/backend/repositories/data/: estaciones_rutas.json  rutas.json
project/python_services/backend/services/: route.py  station.py  travel_finder.py
project/python_services/backend/services/travel/: base_travel.py  data_preparer.py  direct_travel.py  route_processor.py  route_validator.py  transfer_travel.py
