[tool.poetry]
name = "SmartCommute"
version = "0.1.0"
description = "Backend for Bogota Bus Route Management"
authors = [
    "Juan Bedoya <jebedoyal@udistrital.edu.co>",
    "David Garcia <dfgarcial@udistrital.edu.co>"
]
license = "GNU"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.4"
pre-commit = "^4.1.0"
pytest = "^8.3.4"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
